src/test/deca/context/invalid/decl_field_type_void.deca
// Test of the rule 2.5: void is not a type.

class A  {
    void variable = 5;
}

// Resultat:
//# Mettre un bon message d'erreur
